--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "1.12.3",
     "typescript": "^3.9.7"
   }
 }
