--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@types/node": "^14.0.27",
     "cypress": "^6.8.0",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "*",
     "start-server-and-test": "^1.12.1",
     "typescript": "^3.9.7"
   }
