--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test": "server-test start 1234 'cypress run'"
   },
   "dependencies": {
-    "@actyx/pond": "^2.0.1"
+    "@actyx/pond": "^3.0.0-beta1",
+    "@actyx/sdk": "^0.0.2",
+    "@types/node-fetch": "^2.5.10"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
     "cypress": "^6.8.0",
-    "parcel": "next",
+    "parcel": "^2.0.0-beta.2",
     "start-server-and-test": "^1.12.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "@types/node-fetch": "^2.5.10"
   }
 }
