--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "test": "server-test start 1234 'cypress run'"
   },
   "dependencies": {
-    "@actyx/pond": "^3.0.0-beta1",
-    "@actyx/sdk": "^0.0.2",
-    "@types/node-fetch": "^2.5.10"
+    "@actyx/pond": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@types/node-fetch": "^2.5.10",
     "cypress": "^6.8.0",
     "parcel": "^2.0.0-beta.2",
+    "process": "^0.11.10",
     "start-server-and-test": "^1.12.1",
-    "typescript": "^3.9.7",
-    "@types/node-fetch": "^2.5.10"
+    "typescript": "^3"
   }
 }
